[package]
name = "aoc2022-rs"
authors = ["sgt.sgt@gmail.com"]
repository = "https://github.com/sgt/aoc2022-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.0"
