[package]
name = "aoc2022-rs"
authors = ["sgt.sgt@gmail.com"]
repository = "https://github.com/sgt/aoc2022-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
gcd = "2.2.0"
itertools = "0.10.5"
json = "0.12.4"
lazy_static = "1.4.0"
pathfinding = "4.1.1"
ranges = "0.3.3"
rayon = "1.6.1"
regex = "1.7.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
test-case = "2.2.2"

[profile.release]
debug = true
